{
    "name": "DefaultActions",
    "maps": [
        {
            "name": "Rocket",
            "id": "10f019cb-e857-4d9c-8eae-1afcaa844a4e",
            "actions": [
                {
                    "name": "ForceUp",
                    "type": "PassThrough",
                    "id": "bf0f2683-7868-4a14-b7f2-203aeb8e6d5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftRight",
                    "type": "PassThrough",
                    "id": "5afc2433-82d7-4c17-8f2b-6d1b51ea70c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b0fab39b-bc54-49ff-b516-f571e9c0bd80",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForceUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ddcd631c-4a9f-4a00-ba0a-391615d917cd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForceUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "8342ed90-873d-4ea5-93ff-0ecad7690011",
                    "path": "1DAxis(minValue=-0.2,maxValue=0.2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "10a38dce-76f9-49dc-965c-c2d982b25346",
                    "path": "<Touchscreen>/delta/left",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0eaf195b-5b95-422e-8fdd-716edaf5417d",
                    "path": "<Touchscreen>/delta/right",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}